--- a/infra/modules/load-balancer/frontend-config/metadata.display.yaml
+++ b/infra/modules/load-balancer/frontend-config/metadata.display.yaml
@@ -15,40 +15,34 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: terraform-cloud-deployment-gce-display
+  name: terraform-cloud-deployment-gce-load-balancer/frontend-config-display
   annotations:
     config.kubernetes.io/local-config: "true"
 spec:
   info:
-    title: Cloud Deployment on GCE
+    title: Cloud Deployment on GCE - Frontend
     source:
       repo: https://github.com/GoogleCloudPlatform/terraform-cloud-deployment-gce.git
       sourceType: git
-      dir: /infra
+      dir: /infra/modules/load-balancer/frontend-config
   ui:
     input:
       variables:
-        bucket_location:
-          name: bucket_location
-          title: Bucket Location
-        data_init_archive_file_name:
-          name: data_init_archive_file_name
-          title: Data Init Archive File Name
-        data_init_bucket_name:
-          name: data_init_bucket_name
-          title: Data Init Bucket Name
+        backend_bucket_id:
+          name: backend_bucket_id
+          title: Backend Bucket Id
+        global_address:
+          name: global_address
+          title: Global Address
         labels:
           name: labels
           title: Labels
-        project_id:
-          name: project_id
-          title: Project Id
-        region:
-          name: region
-          title: Region
-        source_image:
-          name: source_image
-          title: Source Image
-        zones:
-          name: zones
-          title: Zones
+        name_suffix:
+          name: name_suffix
+          title: Name Suffix
+        resource_path:
+          name: resource_path
+          title: Resource Path
+        weighted_backend_services:
+          name: weighted_backend_services
+          title: Weighted Backend Services
