--- a/infra/modules/networking/metadata.display.yaml
+++ b/infra/modules/networking/metadata.display.yaml
@@ -15,40 +15,25 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: terraform-cloud-deployment-gce-display
+  name: terraform-cloud-deployment-gce-networking-display
   annotations:
     config.kubernetes.io/local-config: "true"
 spec:
   info:
-    title: Cloud Deployment on GCE
+    title: Cloud Deployment on GCE - Networking
     source:
       repo: https://github.com/GoogleCloudPlatform/terraform-cloud-deployment-gce.git
       sourceType: git
-      dir: /infra
+      dir: /infra/modules/networking
   ui:
     input:
       variables:
-        bucket_location:
-          name: bucket_location
-          title: Bucket Location
-        data_init_archive_file_name:
-          name: data_init_archive_file_name
-          title: Data Init Archive File Name
-        data_init_bucket_name:
-          name: data_init_bucket_name
-          title: Data Init Bucket Name
-        labels:
-          name: labels
-          title: Labels
+        health_check_allow_ports:
+          name: health_check_allow_ports
+          title: Health Check Allow Ports
         project_id:
           name: project_id
           title: Project Id
         region:
           name: region
           title: Region
-        source_image:
-          name: source_image
-          title: Source Image
-        zones:
-          name: zones
-          title: Zones
