--- a/infra/modules/vm-container/metadata.display.yaml
+++ b/infra/modules/vm-container/metadata.display.yaml
@@ -15,40 +15,55 @@
 apiVersion: blueprints.cloud.google.com/v1alpha1
 kind: BlueprintMetadata
 metadata:
-  name: terraform-cloud-deployment-gce-display
+  name: terraform-cloud-deployment-gce-vm-container-display
   annotations:
     config.kubernetes.io/local-config: "true"
 spec:
   info:
-    title: Cloud Deployment on GCE
+    title: Cloud Deployment on GCE - VM Container
     source:
       repo: https://github.com/GoogleCloudPlatform/terraform-cloud-deployment-gce.git
       sourceType: git
-      dir: /infra
+      dir: /infra/modules/vm-container
   ui:
     input:
       variables:
-        bucket_location:
-          name: bucket_location
-          title: Bucket Location
-        data_init_archive_file_name:
-          name: data_init_archive_file_name
-          title: Data Init Archive File Name
-        data_init_bucket_name:
-          name: data_init_bucket_name
-          title: Data Init Bucket Name
+        health_check_port:
+          name: health_check_port
+          title: Health Check Port
+        hostname:
+          name: hostname
+          title: Hostname
         labels:
           name: labels
           title: Labels
+        metadata:
+          name: metadata
+          title: Metadata
+        mig_name:
+          name: mig_name
+          title: Mig Name
+        named_ports:
+          name: named_ports
+          title: Named Ports
         project_id:
           name: project_id
           title: Project Id
         region:
           name: region
           title: Region
+        service_account:
+          name: service_account
+          title: Service Account
         source_image:
           name: source_image
           title: Source Image
-        zones:
-          name: zones
-          title: Zones
+        startup_script:
+          name: startup_script
+          title: Startup Script
+        tags:
+          name: tags
+          title: Tags
+        vpc_network_self_link:
+          name: vpc_network_self_link
+          title: Vpc Network Self Link
