--- a/infra/modules/networking/metadata.yaml
+++ b/infra/modules/networking/metadata.yaml
@@ -40,7 +40,7 @@ spec:
       varType: list(number)
       required: true
     - name: project_id
-      description: GCP project ID.
+      description: Google Cloud project ID.
       varType: string
       required: true
     - name: region
@@ -65,3 +65,4 @@ spec:
     - iam.googleapis.com
     - storage.googleapis.com
     - serviceusage.googleapis.com
+    - logging.googleapis.com
