--- a/infra/modules/vm-container/metadata.yaml
+++ b/infra/modules/vm-container/metadata.yaml
@@ -66,7 +66,7 @@ spec:
           ))
       required: true
     - name: project_id
-      description: GCP project ID.
+      description: Google Cloud project ID.
       varType: string
       required: true
     - name: region
@@ -117,3 +117,4 @@ spec:
     - iam.googleapis.com
     - storage.googleapis.com
     - serviceusage.googleapis.com
+    - logging.googleapis.com
